fix z-index

--- a/static/scenes/buildandbolt/sass/_variables.scss
+++ b/static/scenes/buildandbolt/sass/_variables.scss
@@ -8,6 +8,7 @@ $table-width: 3;
 $table-height: 2;
 
 $gui-z-index: 100;
+$walkthrough-z-index: 90;
 $player-z-index: 10;
 $fence-z-index: 20;
 
